# NGPS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: ngps_nafnet_default.yaml  nsn2n_nafnet_default.yaml  synthetic_demo.yaml
datasets/: __init__.py  synthetic.py  triplet_dataset.py  volume_folder.py
docs/: DATA.md  METHOD_MAPPING.md  REPRODUCIBILITY.md
examples/: train_synthetic_demo.ps1  train_synthetic_demo.sh
ngps/: __init__.py  config.py  guide.py  losses.py  metrics.py  nafnet.py  sampler.py
scripts/: evaluate_volume.py  infer_volume.py  make_synthetic_demo_data.py  smoke_test.py  train_ngps.py  train_nsn2n.py
