[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngps-denoising"
version = "1.0.0"
description = "Neighbor-Guided Patch Sampling for volumetric self-supervised denoising"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "NGPS Authors"}]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "opencv-python>=4.7",
  "scikit-image>=0.20",
  "torch>=2.0",
  "tqdm>=4.64",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ngps*", "datasets*"]
